@@ -1,3 +1,7 @@
+2003-10-09	fabian
+
+    * Updated all localizations for Script menu.
+    
 2003-10-07	ujwal
 
     * Fixed bug in VT100Screen: clearBuffer.
